# AI-Autonomous-Assistant

./: .gitignore  .pre-commit-config.yaml  DEV_PROCESS.txt  Dev_Process.md  LICENSE.txt  README.md  STT_offline.md  STT_offline_vosk_rpi5.md  TTS_offline.md  config.yaml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/python-uv-setup/: action.yml
.github/workflows/: ci.yml  run_tests.yml
data/: jfk_fr.flac
data/models/piper/: en_GB-alba-medium.onnx.json  fr_FR-gilles-low.onnx.json
demo/: STS_VAD_models.md  sysutils.py  test_voice_agent.py  voice_agent_offline.md  voice_agent_offline.py  whisper_objects.py
demo/STT/vosk/: STT_offline_vosk_rpi5.md  vosk_models.sh  vosk_test_simple.py
demo/STT/whisper/: load_huggingface_objects.py  sysutils.py  test_whisper.py  test_whisper_w_huggingface.py
docs/: DEV_PROCESS.md  GIT_COMMIT.md  STS_VAD_models.md  STT_offline.md  TTS_offline.md  audio_usb_test.md
examples/STT/vosk/: STT_offline_vosk_rpi5.md  vosk_test_simple.py
examples/STT/whisper/: STT_offline_whisper_rpi5.md  load_huggingface_objects.py  test_whisper.py  test_whisper_w_huggingface.py  whisper_objects.py
examples/TTS/: text2speech_espeak.py  text2speech_piper.py
scripts/install/: dependencies.sh
scripts/models/audio/: fast_whisper_objects.py  load_all.py  load_huggingface_objects.py  models_check.py  openai_model.py  piper_models.py  vosk_models.py  vosk_models.sh  whisper_objects.py  whisper_objects.sh
scripts/tests/: audio_test.sh
src/: main.py
src/audio/: fast_whisper_objects.py  test_voice_agent.py  voice_agent_offline.md  voice_agent_offline.py
src/utils/: config.py  sysutils.py
tests/: audio_test.sh  audio_usb_test.md  test_basic.py
