[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AI-Autonomous-Assistant"
version = "0.1.0"
description = "AI Autonomous Assistant"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Chcavignx", email = "chcavignx@gmail.com"}
]

# Dépendances principales (runtime)
dependencies = [
    "accelerate>=0.20.3",
    "datasets>=2.14.5",
    "faster-whisper>=0.1.3",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "huggingface-hub>=0.18.0",
    "joblib>=1.3.0",
    "librosa>=0.10.0",
    "numba>=0.57.0",
    "numpy>=1.24.0",
    "openai-whisper>=20230314",
    "pillow>=10.0.0",
    "piper-tts>=0.1.0",
    "pyaudio>=0.2.13",
    "pydub>=0.25.1",
    "pyttsx3>=2.90",
    "requests>=2.31.0",
    "scipy>=1.11.0",
    "silero-vad>=2.0.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "speechrecognition>=3.10.0",
    "tiktoken>=0.4.0",
    "tokenizers>=0.19.0",
    "torch>=2.0.2",
    "torchaudio>=2.0.2",
    "torchvision>=0.15.2",
    "transformers>=4.35.0",
]

# Dépendances optionnelles pour CI/CD
[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pre-commit>=4.0.0",
]
ci = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.uv]
# Configuration spécifique à uv
# uv will use the python_version from [project] requires-python
override-dependencies = [
    "numpy>=1.26.0,<2.0"
]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"
python_files = ["test_*.py", "*_test.py", "__test_*.py"]

exclude = [
"**/__pycache__",
"**/tests/__pycache__",
"**/*.pyc",
"**/dist/",
"**/*.egg-info/",
"**/.pytest_cache/",
"**/.mypy_cache/",
"**/.ruff_cache/",
"examples/",
"**/test*",
]
