[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-autonomous-assistant"
version = "0.1.0"
description = "AI Autonomous Assistant"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["AI", "Autonomous", "Assistant","Raspberry PI"]
authors = [
    {name = "Chcavignx", email = "chcavignx@gmail.com"}
]
maintainers = [
    {name = "Chcavignx", email = "chcavignx@gmail.com"}
]

classifiers = [
  # How mature is this project? Common values are
  #   1 - Planning
  #   2 - Pre-Alpha
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 2 - Pre-Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Raspberry Pi",
]

# Dépendances principales (runtime)
dependencies = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "joblib>=1.3.0",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "numba>=0.57.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.0", # Variables d'environnement
    "pyyaml>=6.0", # Config files
    "requests>=2.31.0", # HTTP requests
    "loguru>=0.7.0", # Logging
    "blobfile",
]

# Dépendances optionnelles pour CI/CD
[project.optional-dependencies]
ai = [
    "accelerate>=0.20.3",
    "datasets>=2.14.5",
    "huggingface-hub>=0.18.0",
    "tiktoken>=0.4.0",
    "tokenizers>=0.19.0",
    "transformers>=4.35.0",
]
vision = [
    "torchvision>=0.15.2",
    "pillow>=10.0.0",
    "torch>=2.0.2",
]
audio = [
    "torchaudio>=2.0.2",
    "speechrecognition>=3.10.0",
    "vosk>=0.3.45",
    "openai-whisper>=20230314",
    "faster-whisper>=0.1.3",
    "pyttsx3>=2.90",
    "pydub>=0.25.1",
    "scipy>=1.11.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "piper-tts>=0.1.0",
    "silero-vad>=2.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pre-commit>=4.0.0",
]
ci = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
rpi = [
    "pyaudio>=0.2.14",
]

all = [
    "ai-autonomous-assistant[audio,ai,vision,dev,rpi]",
]

[tool.uv]
# Configuration spécifique à uv
# uv will use the python_version from [project] requires-python
override-dependencies = [
    "numpy>=1.26.0,<2.0"
]
environments = [
    "sys_platform == 'linux' and platform_machine == 'aarch64'",  # ARM64
]

[tool.mypy]
python_version = "3.11"
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"
python_files = ["test_*.py", "*_test.py", "__test_*.py"]

exclude = [
"**/__pycache__",
"**/tests/__pycache__",
"**/*.pyc",
"**/dist/",
"**/*.egg-info/",
"**/.pytest_cache/",
"**/.mypy_cache/",
"**/.ruff_cache/",
"examples/",
"**/test*",
]
